--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<!-- Title -->
 	<title>San Pedro Apostol Tacna</title>
 	<!-- Bootstrap -->
-	<link rel="stylesheet" type="text/css" href="assets/css/bootstrap.min.css">
+	<link rel="stylesheet" type="text/css" href=".../assets/css/bootstrap.min.css">
 	<!-- Favicon -->
 	<link rel="icon" type="image/x-icon" href="assets/images/Logotipo-SanPedro.svg">
 	<!-- Slick Slider -->
