--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@
 					<div class="event">
 						<img src="assets/images/img-pliturgia.webp" alt="Event Image 5">
 						<div class="event-data">
-							<p class="text-white">Stom Park New York</p>
+							<p class="text-white">Conforma el grupo de Liturgia</p>
 							<h4><a href="event-detail.html">Pastoral de Liturgia</a></h4>
 							<ul>
 								<li><img src="assets/images/calendar.svg" alt="calendar 4">Reuniones: Por definir</li>
@@ -528,23 +528,23 @@
 		<h2 class="text-center" style="margin-bottom:35px">Horarios de Misas Comunitarias</h2>
 		<div class="row mt-3">
 				<div class="col-12 col-md-6">
-						<img src="assets/images/foto-hora-misa.png" class="img-fluid rounded" alt="Misa" style="margin-bottom:10px"/>
+				<img src="assets/images/foto-hora-misa.png" class="img-fluid rounded" alt="Misa" style="margin-bottom:10px"/>
 				</div>
 
 				<div class="col-12 col-md-6 d-flex flex-column justify-content-center">
-						<div class="card mb-3">
-								<div class="card-body">
-										<h5 class="card-title">Lunes a Sábados</h5>
-										<p class="card-text">6:00 PM</p>
-								</div>
-						</div>
-						<div class="card">
-								<div class="card-body">
-										<h5 class="card-title">Domingos</h5>
-										<p class="card-text">9:00 AM, 12:00 PM, 6:00 PM</p>
-								</div>
-						</div>
+				 <div class="card mb-3">
+				 	<div class="card-body">
+						<h5 class="card-title">Lunes a Sábados</h5>
+						<p class="card-text">6:00 PM</p>
+					</div>
 				</div>
+				<div class="card">
+					<div class="card-body">
+						<h5 class="card-title">Domingos</h5>
+						<p class="card-text">9:00 AM, 12:00 PM, 6:00 PM</p>
+					</div>
+				</div>
+			</div>
 		</div>
 </section>
 </div>
@@ -631,7 +631,7 @@
 					<div class="box">
 						<div class="parallax pattren" style="background-image: url(assets/images/pattren.jpg);"></div>
 						<svg id="Bible" enable-background="new 0 0 512 512" viewBox="0 0 512 512" xmlns="http://www.w3.org/2000/svg"><g><path d="m316 306h-120c-5.523 0-10 4.477-10 10s4.477 10 10 10h120c5.523 0 10-4.477 10-10s-4.477-10-10-10z"></path><path d="m181 191h35v65c0 5.523 4.477 10 10 10h60c5.523 0 10-4.477 10-10v-65h35c5.523 0 10-4.477 10-10v-60c0-5.523-4.477-10-10-10h-35v-35c0-5.523-4.477-10-10-10h-60c-5.523 0-10 4.477-10 10v35h-35c-5.523 0-10 4.477-10 10v60c0 5.523 4.477 10 10 10zm10-60h35c5.523 0 10-4.477 10-10v-35h40v35c0 5.523 4.477 10 10 10h35v40h-35c-5.523 0-10 4.477-10 10v65h-40v-65c0-5.523-4.477-10-10-10h-35z"></path><circle cx="256" cy="502" r="10"></circle><path d="m66 70v372c0 38.598 31.402 70 70 70h75c5.523 0 10-4.478 10-10s-4.477-10-10-10h-75c-27.57 0-50-22.43-50-50s22.43-50 50-50.01h271.47c-5.939 10.387-9.906 24.207-11.091 40.01h-260.379c-5.523 0-10 4.477-10 10s4.477 10 10 10h260.379c1.185 15.803 5.151 29.623 11.09 40h-106.469c-5.523 0-10 4.478-10 10s4.477 10 10 10h135c5.523 0 10-4.478 10-10s-4.477-10-10-10c-8.155 0-20-19.478-20-50s11.845-50 20-50c5.523 0 10-4.477 10-10v-372c0-5.523-4.477-10-10-10h-300c-38.598 0-70 31.402-70 70zm360 302h-290c-19.567 0-37.285 8.07-50 21.057v-323.057c0-27.57 22.43-50 50-50h290z"></path></g></svg>
-						<h2><span>Documentos</span>m</h2>
+						<h2><span>Documentos</span></h2>
 						<p>Solicita tus documentos parroquiales, como partidas de bautizo, confirmación, matrimonio, etc.</p>
 					</div>
 				</div>
@@ -726,7 +726,7 @@
 					</div>
 					<div class="copy-right text-center justify-content-center">
 						<div class="footer-rights">
-							<p class="text-white">© Copyright <span class="text-white">2024 Vicaria</span>. Todos los derechos reservados.</p>
+							<p class="text-white">© Copyright SSB <span class="text-white">2024 Vicaria</span>. Todos los derechos reservados.</p>
 						</div>
 				</div>
 				</div>
