--- a/index.html
+++ b/index.html
@@ -648,6 +648,93 @@
 		</div>
 	</section>
 
+	<!-- Blog Start -->
+	<section class="gap blog">
+		<div class="container">
+			<div class="heading">
+				<img src="assets/images/heading-img.webp" alt="Heading Image 5">
+				<p>Scandoulous Things Jesus did in his Ministry</p>
+				<h2>Recent Articles</h2>
+			</div>
+			<div class="row justify-content-center">
+				<div class="col-lg-4 col-md-6 col-sm-12">
+					<div class="blog-meta" data-aos="fade-up" data-aos-delay="400" data-aos-duration="600">
+						<figure>
+							<img class="img-fluid" src="assets/images/blog-img.webp" alt="Blog image 1">
+						</figure>
+						<ul>
+							<li class="date">21 Dec, 2021</li>
+							<li><img src="assets/images/message.svg" alt="Message 1">12</li>
+						</ul>
+						<a href="blog-detail.html" class="font-bold">Public Health By Allowing California Order</a>
+						<p>Alienum phaedrum toquatoeu, vis detraxit iculis eiex petenis in mei Mei an peri sl gra an peri sl graecis vix apernihil.</p>
+					</div>
+				</div>
+
+				<div class="col-lg-4 col-md-6 col-sm-12">
+					<div class="blog-meta" data-aos="fade-up" data-aos-delay="500" data-aos-duration="900">
+						<figure>
+							<img class="img-fluid" src="assets/images/blog-img-2.webp" alt="Blog image 2">
+						</figure>
+						<ul>
+							<li class="date">21 Dec, 2021</li>
+							<li><img src="assets/images/message.svg" alt="Message 2">12</li>
+						</ul>
+						<a href="blog-detail.html" class="font-bold">Public Health By Allowing California Order</a>
+						<p>Alienum phaedrum toquatoeu, vis detraxit iculis eiex petenis in mei Mei an peri sl gra an peri sl graecis vix apernihil.</p>
+					</div>
+				</div>
+
+				<div class="col-lg-4 col-md-6 col-sm-12">
+					<div class="blog-meta" data-aos="fade-up" data-aos-delay="700" data-aos-duration="1000">
+						<figure>
+							<img class="img-fluid" src="assets/images/blog-img-3.webp" alt="Blog image 3">
+						</figure>
+						<ul>
+							<li class="date">21 Dec, 2021</li>
+							<li><img src="assets/images/message.svg" alt="Message 3">12</li>
+						</ul>
+						<a href="blog-detail.html" class="font-bold">Public Health By Allowing California Order</a>
+						<p>Alienum phaedrum toquatoeu, vis detraxit iculis eiex petenis in mei Mei an peri sl gra an peri sl graecis vix apernihil.</p>
+					</div>
+				</div>
+			</div>
+
+			<div class="d-flex justify-content-center loadmore">
+				<a href="blog.html" class="theme-btn">View All Posts</a>
+			</div>
+		</div>
+	</section>
+	<!-- Blog End -->
+
+	<footer class="footer-three w-90 m-auto position-relative">
+			<div class="parallax green-overlay" style="background-image: url(assets/images/footer-three.webp);"></div>
+			<div class="container">
+				<div class="row">
+					<div class="social-area">
+						<ul class="flex-all">
+							<li class="flex-all"><span class="flex-all rounded-circle"><svg id="fb-svg" enable-background="new 0 0 24 24" viewBox="0 0 24 24"
+								xmlns="http://www.w3.org/2000/svg">
+								<path d="m15.997 3.985h2.191v-3.816c-.378-.052-1.678-.169-3.192-.169-3.159 0-5.323 1.987-5.323 5.639v3.361h-3.486v4.266h3.486v10.734h4.274v-10.733h3.345l.531-4.266h-3.877v-2.939c.001-1.233.333-2.077 2.051-2.077z"></path>
+							</svg></span> <a href="https://www.facebook.com/SANPEDROvicariaTACNA" class="font-bold">Siguenos en Facebook</a></li>
+							<li class="flex-all"><span class="flex-all rounded-circle"><svg viewBox="0 0 511 511.9" id="insta-gram" xmlns="http://www.w3.org/2000/svg"><path d="m510.949219 150.5c-1.199219-27.199219-5.597657-45.898438-11.898438-62.101562-6.5-17.199219-16.5-32.597657-29.601562-45.398438-12.800781-13-28.300781-23.101562-45.300781-29.5-16.296876-6.300781-34.898438-10.699219-62.097657-11.898438-27.402343-1.300781-36.101562-1.601562-105.601562-1.601562s-78.199219.300781-105.5 1.5c-27.199219 1.199219-45.898438 5.601562-62.097657 11.898438-17.203124 6.5-32.601562 16.5-45.402343 29.601562-13 12.800781-23.097657 28.300781-29.5 45.300781-6.300781 16.300781-10.699219 34.898438-11.898438 62.097657-1.300781 27.402343-1.601562 36.101562-1.601562 105.601562s.300781 78.199219 1.5 105.5c1.199219 27.199219 5.601562 45.898438 11.902343 62.101562 6.5 17.199219 16.597657 32.597657 29.597657 45.398438 12.800781 13 28.300781 23.101562 45.300781 29.5 16.300781 6.300781 34.898438 10.699219 62.101562 11.898438 27.296876 1.203124 36 1.5 105.5 1.5s78.199219-.296876 105.5-1.5c27.199219-1.199219 45.898438-5.597657 62.097657-11.898438 34.402343-13.300781 61.601562-40.5 74.902343-74.898438 6.296876-16.300781 10.699219-34.902343 11.898438-62.101562 1.199219-27.300781 1.5-36 1.5-105.5s-.101562-78.199219-1.300781-105.5zm-46.097657 209c-1.101562 25-5.300781 38.5-8.800781 47.5-8.601562 22.300781-26.300781 40-48.601562 48.601562-9 3.5-22.597657 7.699219-47.5 8.796876-27 1.203124-35.097657 1.5-103.398438 1.5s-76.5-.296876-103.402343-1.5c-25-1.097657-38.5-5.296876-47.5-8.796876-11.097657-4.101562-21.199219-10.601562-29.398438-19.101562-8.5-8.300781-15-18.300781-19.101562-29.398438-3.5-9-7.699219-22.601562-8.796876-47.5-1.203124-27-1.5-35.101562-1.5-103.402343s.296876-76.5 1.5-103.398438c1.097657-25 5.296876-38.5 8.796876-47.5 4.101562-11.101562 10.601562-21.199219 19.203124-29.402343 8.296876-8.5 18.296876-15 29.398438-19.097657 9-3.5 22.601562-7.699219 47.5-8.800781 27-1.199219 35.101562-1.5 103.398438-1.5 68.402343 0 76.5.300781 103.402343 1.5 25 1.101562 38.5 5.300781 47.5 8.800781 11.097657 4.097657 21.199219 10.597657 29.398438 19.097657 8.5 8.300781 15 18.300781 19.101562 29.402343 3.5 9 7.699219 22.597657 8.800781 47.5 1.199219 27 1.5 35.097657 1.5 103.398438s-.300781 76.300781-1.5 103.300781zm0 0"></path><path d="m256.449219 124.5c-72.597657 0-131.5 58.898438-131.5 131.5s58.902343 131.5 131.5 131.5c72.601562 0 131.5-58.898438 131.5-131.5s-58.898438-131.5-131.5-131.5zm0 216.800781c-47.097657 0-85.300781-38.199219-85.300781-85.300781s38.203124-85.300781 85.300781-85.300781c47.101562 0 85.300781 38.199219 85.300781 85.300781s-38.199219 85.300781-85.300781 85.300781zm0 0"></path><path d="m423.851562 119.300781c0 16.953125-13.746093 30.699219-30.703124 30.699219-16.953126 0-30.699219-13.746094-30.699219-30.699219 0-16.957031 13.746093-30.699219 30.699219-30.699219 16.957031 0 30.703124 13.742188 30.703124 30.699219zm0 0"></path></svg></span> <a href="https://www.instagram.com/parroquiasanpedroapostoltacna" class="font-bold">Instagram </a></li>
+						</ul>
+					</div>
+				</div>
+				<div class="row">
+					<div class="footer-main-content text-center w-95 m-auto position-relative">
+						<a href="index.html"><img src="assets/images/Logotipo-SanPedro.svg" alt="footer logo" style="height:90px"></a>
+						<p class="w-40 m-auto font-bold">Send us your prayer request or praise report below or email us at <span>blesso@domain.com</span></p>
+					</div>
+					<div class="copy-right text-center justify-content-center">
+						<div class="footer-rights">
+							<p class="text-white">© Copyright <span class="text-white">2024 Vicaria</span>. Todos los derechos reservados.</p>
+						</div>
+				</div>
+				</div>
+			</div>
+		</footer>
+
 	
 
 	<!-- Jquery -->
