--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
 										<ul class="sub-menu">
 											<li><a href="#nosotros">Parroquia</a></li>
 											<li><a href="#grupos-parroquiales">Grupos Parroquiales</a></li>
+											<li><a href="#secretaria">Secretaría Parroquial</a></li>
 										</ul>
 									</li>
 									<li><a href="#agenda">Agenda</a></li>
@@ -98,6 +99,7 @@
 					<ul class="sub-menu">
 						<li><a href="#nosotros">Parroquia</a></li>
 						<li><a href="#grupos-parroquiales">Grupos Parroquiales</a></li>
+						<li><a href="#secretaria">Secretaría Parroquial</a></li>
 					</ul>
 				</li>
 				<li><a href="#agenda">Agenda</a></li>
@@ -567,7 +569,7 @@
 			</ul>
 		</div>
 	</div>
-	<section class="gap about-three">
+	<section class="gap about-three" id="secretaria">
 		<div class="container">
 			<div class="row align-items-center">
 
