--- a/index.html
+++ b/index.html
@@ -703,7 +703,7 @@
 			</div>
 
 			<div class="d-flex justify-content-center loadmore">
-				<a href="Vicanoticias" class="theme-btn">View All Posts</a>
+				<a href="Vicanoticias" class="theme-btn">Ver todas las publicaciones</a>
 			</div>
 		</div>
 	</section>
@@ -753,13 +753,6 @@
 	<script src="assets/js/bootstrap.min.js"></script>
 	<!-- Custom Js -->
 	<script src="assets/js/custom.js"></script>
-
-	<script> 
-	function scrollToSection(sectionId) {
-	  const element = document.getElementById(sectionId);
-	  element.scrollIntoView({ behavior: 'smooth' });
-	}
-	</script>
 </body>
 
 </html>
