--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
 								<li><img src="assets/images/calendar.svg" alt="calendar 4">Reuniones: Por definir</li>
 								<li><img src="assets/images/clock.svg" alt="clock 4">Por definir</li>
 							</ul>
-							<a class="theme-btn" href="JavaScript:void(0)">Sé un catequista</a>
+							<a class="theme-btn" href="https://wa.me/51920663435">Sé un catequista</a>
 						</div>
 					</div>
 				</div>
@@ -274,10 +274,10 @@
 							<p class="text-white">Grupo de catequistas para la preparacion de niños de 1° Comunión.</p>
 							<h4><a href="event-detail.html">Catequesis de Primera Comunión</a></h4>
 							<ul>
-								<li><img src="assets/images/calendar.svg" alt="calendar 2">Reuniones: Sábaados y Domingos</li>
+								<li><img src="assets/images/calendar.svg" alt="calendar 2">Reuniones: Sábados y Domingos</li>
 								<li><img src="assets/images/clock.svg" alt="clock 2">Por definir</li>
 							</ul>
-							<a class="theme-btn" href="JavaScript:void(0)">Sé un catequista</a>
+							<a class="theme-btn" href="https://wa.me/51920663435">Sé un catequista</a>
 						</div>
 					</div>
 				</div>
@@ -289,10 +289,10 @@
 							<p class="text-white">Grupo de catequistas para la preparacion de jóvenes de la Confirmación.</p>
 							<h4><a href="event-detail.html">Catequesis de Confirmación</a></h4>
 							<ul>
-								<li><img src="assets/images/calendar.svg" alt="calendar 2">Reuniones: Sábaados y Domingos</li>
+								<li><img src="assets/images/calendar.svg" alt="calendar 2">Reuniones: Sábados y Domingos</li>
 								<li><img src="assets/images/clock.svg" alt="clock 2">Por definir</li>
 							</ul>
-							<a class="theme-btn" href="JavaScript:void(0)">Sé un catequista</a>
+							<a class="theme-btn" href="https://wa.me/51920663435">Sé un catequista</a>
 						</div>
 					</div>
 				</div>
@@ -307,7 +307,7 @@
 								<li><img src="assets/images/calendar.svg" alt="calendar 2">Reuniones: Por definir</li>
 								<li><img src="assets/images/clock.svg" alt="clock 2">Por definir</li>
 							</ul>
-							<a class="theme-btn" href="JavaScript:void(0)">Sé un catequista</a>
+							<a class="theme-btn" href="https://wa.me/51920663435">Sé un catequista</a>
 						</div>
 					</div>
 				</div>
@@ -322,7 +322,7 @@
 								<li><img src="assets/images/calendar.svg" alt="calendar 3"> Reuniones: Por definir</li>
 								<li><img src="assets/images/clock.svg" alt="clock 3">Por definir</li>
 							</ul>
-							<a class="theme-btn" href="JavaScript:void(0)">Únete ahora</a>
+							<a class="theme-btn" href="https://wa.me/51920663435">Solicita Información</a>
 						</div>
 					</div>
 				</div>
@@ -337,7 +337,7 @@
 								<li><img src="assets/images/calendar.svg" alt="calendar 4">Reuniones: Por definir</li>
 								<li><img src="assets/images/clock.svg" alt="clock 4">Por definir</li>
 							</ul>
-							<a class="theme-btn" href="JavaScript:void(0)">Book Your Seat</a>
+							<a class="theme-btn" href="https://wa.me/51920663435">Solicita Información</a>
 						</div>
 					</div>
 				</div>
@@ -352,7 +352,7 @@
 								<li><img src="assets/images/calendar.svg" alt="calendar 4">Reuniones: Por definir</li>
 								<li><img src="assets/images/clock.svg" alt="clock 4">Por definir</li>
 							</ul>
-							<a class="theme-btn" href="JavaScript:void(0)">Únete</a>
+							<a class="theme-btn" href="https://wa.me/51920663435">Solicita Información</a>>
 						</div>
 					</div>
 				</div>
@@ -367,7 +367,7 @@
 								<li><img src="assets/images/calendar.svg" alt="calendar 4">Reuniones: Por definir</li>
 								<li><img src="assets/images/clock.svg" alt="clock 4">Por definir</li>
 							</ul>
-							<a class="theme-btn" href="JavaScript:void(0)">Book Your Seat</a>
+							<a class="theme-btn" href="https://wa.me/51920663435">Solicita Información</a>
 						</div>
 					</div>
 				</div>
@@ -382,7 +382,7 @@
 								<li><img src="assets/images/calendar.svg" alt="calendar 4">Reuniones: Por definir</li>
 								<li><img src="assets/images/clock.svg" alt="clock 4">Por definir</li>
 							</ul>
-							<a class="theme-btn" href="JavaScript:void(0)">Book Your Seat</a>
+							<a class="theme-btn" href="https://wa.me/51920663435">Solicita Información</a>
 						</div>
 					</div>
 				</div>
@@ -397,7 +397,7 @@
 								<li><img src="assets/images/calendar.svg" alt="calendar 4">Reuniones: Por definir</li>
 								<li><img src="assets/images/clock.svg" alt="clock 4">Por definir</li>
 							</ul>
-							<a class="theme-btn" href="JavaScript:void(0)">Book Your Seat</a>
+							<a class="theme-btn" href="https://wa.me/51920663435">Solicita Información</a>
 						</div>
 					</div>
 				</div>
@@ -412,7 +412,7 @@
 								<li><img src="assets/images/calendar.svg" alt="calendar 4">Reuniones: Por definir</li>
 								<li><img src="assets/images/clock.svg" alt="clock 4">Por definir</li>
 							</ul>
-							<a class="theme-btn" href="JavaScript:void(0)">Book Your Seat</a>
+							<a class="theme-btn" href="https://wa.me/51920663435">Solicita Información</a>
 						</div>
 					</div>
 				</div>
@@ -427,7 +427,7 @@
 								<li><img src="assets/images/calendar.svg" alt="calendar 4">Reuniones: Por definir</li>
 								<li><img src="assets/images/clock.svg" alt="clock 4">Por definir</li>
 							</ul>
-							<a class="theme-btn" href="JavaScript:void(0)">Book Your Seat</a>
+							<a class="theme-btn" href="https://wa.me/51920663435">Solicita Información</a>
 						</div>
 					</div>
 				</div>
@@ -442,7 +442,7 @@
 								<li><img src="assets/images/calendar.svg" alt="calendar 4">Reuniones: Por definir</li>
 								<li><img src="assets/images/clock.svg" alt="clock 4">Por definir</li>
 							</ul>
-							<a class="theme-btn" href="JavaScript:void(0)">Book Your Seat</a>
+							<a class="theme-btn" href="https://wa.me/51920663435">Solicita Información</a>
 						</div>
 					</div>
 				</div>
@@ -457,7 +457,7 @@
 								<li><img src="assets/images/calendar.svg" alt="calendar 4">Reuniones: Por definir</li>
 								<li><img src="assets/images/clock.svg" alt="clock 4">Por definir</li>
 							</ul>
-							<a class="theme-btn" href="JavaScript:void(0)">Book Your Seat</a>
+							<a class="theme-btn" href="https://wa.me/51920663435">Solicita Información</a>
 						</div>
 					</div>
 				</div>
