--- a/index.html
+++ b/index.html
@@ -703,7 +703,7 @@
 			</div>
 
 			<div class="d-flex justify-content-center loadmore">
-				<a href="Vicanoticias" class="theme-btn">Ver todas las publicaciones</a>
+				<a href="#vicanoticias" class="theme-btn">Ver todas las publicaciones</a>
 			</div>
 		</div>
 	</section>
